--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,14 +1,41 @@
 <!doctype html>
 <title>Homer says</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
+<!-- define the toggle function -->
+<script language="javascript">
+	function toggleState(item){
+		 if(item.className == "on") {
+				item.className="off";
+				alert(item.name + " off");
+		 } else {
+				item.className="on";
+				alert(item.name + " on");
+		 }
+	}
+</script>
+
+
 {% if name %}
   <h1>Hello {{ name }}!</h1>
 {% else %}
   <h1>Hello, Human!</h1>
 {% endif %}
 
+<div class="item">
+	<label for="dresser">Dresser</label>
+	<label class="switch">
+		<input type="checkbox" name="dresser" class="off" onclick="toggleState(this)">
+		<span class="slider round"></span>
+	</label>
+</div>
+<div class="item">
+	<label for="desklamp">Desk Lamp</label>
+	<label class="switch">
+		<input type="checkbox" name="desklamp" class="off" onclick="toggleState(this)">
+		<span class="slider round"></span>
+	</label>
+</div>
+
 <!-- Rounded switch -->
-<label class="switch">
-  <input type="checkbox">
-  <span class="slider round"></span>
-</label>
+
